# opsparse

./: .clang-format  .clangd  .gitignore  CLAUDE.md  CMakeLists.txt  readme.md
benchmarks/: bench_common.hpp  cusparse_reg.cu  opsparse_profile.cu  opsparse_reg.cu
cmake/: findcuda.cmake  options.cmake
experiment_results/: README.md
experiment_results/matrix_lists/: matrices_lt500mb.txt
include/opsparse/core_algo/spgemm/: cusparse_spgemm.hpp  meta.hpp  spgemm.hpp  spgemm_phases.cuh
include/opsparse/core_algo/spgemm/kernels/: binning.cuh  numeric.cuh  setup.cuh  symbolic.cuh
include/opsparse/core_ds/: csr.hpp
include/opsparse/io/: matrix_market.hpp
include/opsparse/numeric/: compute_flop.hpp
include/opsparse/profile/: perf.hpp  spgemm_timings.hpp
include/opsparse/system/: cuda_common.hpp
include/opsparse/utils/: config.hpp  tsc_timer.hpp
scripts/: quick_test.sh  run_suitesparse_debug.sh  sanitizer_test.sh
src/opsparse/core_algo/spgemm/: cusparse_spgemm.cu  meta.cu  spgemm.cu  spgemm_phases.cu
src/opsparse/core_ds/: csr.cu
src/opsparse/numeric/: compute_flop.cu
src/opsparse/profile/: perf.cpp  spgemm_timings.cpp
